# ss

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  Makefile  README.md
include/: ss.h  ss_util.h  sstring.h  sstring_util.h
src/: ss.c  sstring.c
test/: CMakeLists.txt  prove.c  test_core.c  test_macros.h
